# acure

./: Cargo.toml  README.md
acure/: Cargo.toml
acure-dll/: Cargo.toml
acure-dll/acure-base/: Cargo.toml
acure-dll/acure-base/src/: lib.rs
acure-dll/includes/: acure.h
acure/examples/: window.rs
acure/src/: d2di.rs  gdi.rs  lib.rs  surface.rs
examples/: d2d1.rs  window.rs
src/: d2d1.rs  gl.rs  lib.rs  surface.rs  wgl.rs  x11.rs  x11egl.rs
src/shader/: shader.frag  shader.vert  shader_core.frag  shader_core.vert
