[package]
name = "acure"
version = "0.0.1"
edition = "2021"

[features]
default = ["d2d1"]
d2d1 = ["winapi/winuser","winapi/windef","winapi/ntdef","winapi/wingdi","winapi/d2d1","winapi/dwrite"]

[dependencies]
raw-window-handle = "0.6.0"
log = "0.4"

[dependencies.winapi]
version = "0.3.9"
optional = true

[dev-dependencies]
winit = "0.29.3"