[package]
name = "acure"
version = "0.0.1"
edition = "2021"

[features]
default = ["d2d1"]
d2d1 = ["windows/Foundation_Numerics",
    "windows/Win32_Foundation",
    "windows/Win32_System_Com",
    "windows/Win32_Graphics_Direct2D_Common",
    "windows/Win32_Graphics_Direct3D",
    "windows/Win32_Graphics_Direct3D11",
    "windows/Win32_Graphics_Dxgi_Common",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_System_Performance",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_UI_Animation",
    "windows/Win32_UI_WindowsAndMessaging",]

[dependencies]
raw-window-handle = "0.6.0"
log = "0.4"

[dependencies.windows]
version = "0.52.0"
optional = true

[dev-dependencies]
winit = "0.29.3"