[package]
name = "acure"
version = "0.0.1"
edition = "2021"

[features]
default = ["x11_egl"]
d2d1 = ["windows/Foundation_Numerics",
    "windows/Win32_Foundation",
    "windows/Win32_System_Com",
    "windows/Win32_Graphics_Direct2D_Common",
    "windows/Win32_Graphics_DirectWrite",
    "windows/Win32_Graphics_Direct3D",
    "windows/Win32_Graphics_Direct3D11",
    "windows/Win32_Graphics_Dxgi_Common",
    "windows/Win32_Graphics_Gdi",
    "windows/Win32_System_LibraryLoader",
    "windows/Win32_System_Performance",
    "windows/Win32_System_SystemInformation",
    "windows/Win32_UI_Animation",
    "windows/Win32_UI_WindowsAndMessaging",]
x11 = ["dep:x11","x11/xlib","x11/xft"]
x11_egl = ["x11","khronos-egl","gl"]

[dependencies]
raw-window-handle = "0.6.0"
log = "0.4"

gl = { version = "0.14.0", optional = true }

[target."cfg(windows)".dependencies.windows]
version = "0.52.0"
optional = true

[target."cfg(unix)".dependencies]
x11 = { version =  "2.21.0", optional = true }
khronos-egl = { version = "6.0.0", features = ["static"], optional = true }

[dev-dependencies]
winit = "0.29.3"